--- a/style.css
+++ b/style.css
@@ -6339,6 +6339,12 @@ p img,
   margin-left: 0;
 }
 
+/* Content */
+.hentry {
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+}
+
 /* Override the Twitter embed fixed width */
 .twitter-tweet-rendered {
   max-width: 100% !important;
